# mcp_x_server

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  server.py  setup.py
.github/workflows/: docker-publish.yml
agents/: tweet_agent.py
agents/tools/: create_tweet.py
mcp_x_server/: __init__.py  __main__.py  server.py
mcp_x_server/agents/: __init__.py  tweet_agent.py
