[project]
name = "mcp-x-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.0",
    "python-twitter-v2>=0.9.2",
    "dotenv>=0.9.9",
    "pydantic-ai>=0.1.2",
    "pydantic-ai-slim[duckduckgo,openai]>=0.1.2",
]
