[project]
name = "mcp-x-server"
version = "0.1.5"
description = "A mcp x server to post tweets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.0",
    "python-twitter-v2>=0.9.2",
    "dotenv>=0.9.9",
    "pydantic-ai>=0.1.2",
    "pydantic-ai-slim[duckduckgo,openai]>=0.1.2",
]

[project.scripts]
mcp-x-server = "mcp_x_server.__main__:cli"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"